package hu.unideb.inf.server.model.enums;

public enum Role {
    STUDENT,
    SCHOOL,
    ADMIN
}
